--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,12 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'  // Google Services plugin
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    // If you want to use the GPU Filters
+    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
 
 //    implementation project(':chip-navigation-bar')
