--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,12 @@ dependencies {
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    implementation 'com.royrodriguez:transitionbutton:0.2.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation 'tyrantgit:explosionfield:1.0.1'
+
 
 
 
