--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gp2021">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -26,6 +27,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
+        tools:replace="android:icon"
+
         android:theme="@style/Theme.GP2021">
         <activity android:name=".ui.login.ForgetPassword"></activity>
         <activity android:name=".ui.login.SignupActivity" />
