--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'androidx.camera:camera-camera2:1.0.0-beta03'
+    implementation 'androidx.wear:wear:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.72'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-analytics'
@@ -56,7 +58,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     apply plugin: 'com.google.gms.google-services'  // Google Services plugin
     implementation 'de.hdodenhof:circleimageview:3.0.1'
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
     // If you want to use the GPU Filters
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
@@ -69,8 +71,11 @@ dependencies {
     implementation 'tyrantgit:explosionfield:1.0.1'
 
     implementation 'com.muddzdev:styleabletoast:2.2.3'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
 
-
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    compileOnly 'com.google.android.gms:play-services-vision:20.1.3'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
 //    implementation project(':chip-navigation-bar')
 //    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
