--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.GP2021"
-        tools:replace="android:icon">
+        tools:replace="android:icon"
+        android:networkSecurityConfig="@xml/security_config">
         <activity android:name=".ui.instructor.RemoveCategory"></activity>
         <activity android:name=".ui.instructor.AddCategory" />
         <activity android:name=".ui.instructor.DeleteExam" />
