--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.camera:camera-camera2:1.0.0-beta03'
     implementation 'androidx.wear:wear:1.0.0'
     implementation project(path: ':openCVLibrary341')
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -84,6 +85,9 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation 'com.android.volley:volley:1.2.0'
     implementation project(':openCVLibrary341')
+    implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.markushi:circlebutton:1.1'
 
 //    implementation project(':chip-navigation-bar')
 //    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
