--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ dependencies {
     implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.github.markushi:circlebutton:1.1'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 //    implementation project(':chip-navigation-bar')
 //    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
