--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,8 +55,15 @@
         <activity android:name=".ui.login.ForgetPassword" />
         <activity android:name=".ui.login.SignupActivity" />
         <activity android:name=".ui.instructor.Instructor_Mail" />
+        <activity android:name=".ui.instructor.RequestAnalyticsActivity" />
         <activity android:name=".ui.instructor.InstructorHome" />
+        <activity android:name=".ui.instructor.ExamsforOneSelectorActivity" />
+        <activity android:name=".ui.instructor.DetailsForOneExamActivity" />
+
         <activity android:name=".ui.academic.AcademicHome" />
+        <activity android:name=".ui.academic.add_course" />
+        <activity android:name=".ui.academic.addYearWork" />
+        <activity android:name=".ui.academic.addStudent" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
