--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GP2021"
         tools:replace="android:icon">
-        <activity android:name=".ui.instructor.DetailsForOneExamActivity"></activity>
+        <activity android:name=".ui.instructor.addAnswerManually"></activity>
+        <activity android:name=".ui.academic.delete_student" />
+        <activity android:name=".ui.instructor.DetailsForOneExamActivity" />
         <activity android:name=".ui.instructor.ExamsforOneSelectorActivity" />
         <activity android:name=".ui.instructor.RequestAnalyticsActivity" />
 
@@ -62,14 +64,10 @@
         <activity android:name=".ui.instructor.Instructor_Mail" />
         <activity android:name=".ui.instructor.InstructorHome" />
         <activity android:name=".ui.instructor.GenratePDFActivity" />
-
         <activity android:name=".ui.academic.AcademicHome" />
         <activity android:name=".ui.academic.addYearWork" />
         <activity android:name=".ui.academic.addStudent" />
         <activity android:name=".ui.academic.add_course" />
-        
-
-
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
